# techtalk_python

BK/foundational-bk/: AGENTS.md  ARCHITECTURE.md  CODING.md  DATABASE.md  pyproject.toml  pytest.ini
BK/foundational-bk/.game_data/: space_invaders.db
BK/foundational-bk/space_invaders/: __init__.py
BK/foundational-bk/src/space_invaders/controllers/: __init__.py  menu_controller.py
BK/foundational-bk/src/space_invaders/core/: __init__.py  scene_manager.py
BK/foundational-bk/src/space_invaders/factories/: bullet_factory.py  (+1 more)
foundational/: AGENTS.md  ARCHITECTURE.md  CODING.md  DATABASE.md  GAME_DESIGN.md  TEST.md  pyproject.toml  space_invaders.db
foundational/space_invaders/: __init__.py  __main__.py  main.py
foundational/space_invaders/controllers/: game_controller.py
foundational/space_invaders/core/: asset_manager.py  audio_manager.py  constants.py  event_bus.py  game.py  input_manager.py  scene.py  scene_manager.py  settings.py
foundational/space_invaders/factories/: bullet_factory.py  enemy_factory.py  level_factory.py  powerup_factory.py
foundational/space_invaders/models/: entities.py
foundational/space_invaders/repositories/: high_scores.py  settings_repo.py  sqlite.py  stats.py
foundational/space_invaders/scenes/: game_over_scene.py  game_scene.py  high_scores_scene.py  main_menu_scene.py  pause_scene.py  settings_scene.py
foundational/space_invaders/services/: collision_service.py  wave_service.py
foundational/space_invaders/views/: ui.py
foundational/tests/: test_collision_service.py  test_repositories.py  test_wave_service.py
(+91 files in other folders)
