[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-invaders"
version = "0.1.0"
description = "Space Invaders game in Python with scene-based architecture"
requires-python = ">=3.11"
dependencies = [
  "pygame>=2.5.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
