[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "space-invaders"
version = "0.1.0"
description = "Space Invaders game in Python"
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
